[package]
name = "bp-resolver"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
futures = "0.3.30"
iref = { version = "3.1.4", features = ["serde"] }
reqwest = { version = "0.12.5", features = ["json", "cookies"] }
select = "0.6.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
tempfile = "3.10.1"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
url = { version = "2.5.2", features = ["serde"] }
zip = "2.1.3"
